# demo-fastapi-sqlalchemy

./: README.md  pyproject.toml  server.py
demo_fastapi_sqlalchemy/: database.db  decorators.py  main.py  settings.py
demo_fastapi_sqlalchemy/controller/: address_controller.py  comment_controller.py  post_controller.py  user_controller.py
demo_fastapi_sqlalchemy/database/: __init__.py  base.py  exception.py  repository.py  session.py
demo_fastapi_sqlalchemy/dto/: __init__.py  address_dto.py  comment_dto.py  post_dto.py  user_dto.py
demo_fastapi_sqlalchemy/exception/: address_exception.py  comment_exception.py  exception.py  post_exception.py  user_exception.py
demo_fastapi_sqlalchemy/model/: __init__.py  address.py  comment.py  post.py  user.py
demo_fastapi_sqlalchemy/repository/: __init__.py  address_repository.py  comment_repository.py  post_repository.py  user_repository.py
demo_fastapi_sqlalchemy/service/: __init__.py  address_service.py  comment_service.py  post_service.py  user_service.py
tests/: conftest.py
tests/controller/: test_comment_controller.py  test_post_controller.py
