[tool.poetry]
name = "demo-fastapi-sqlalchemy"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "demo_fastapi_sqlalchemy"}]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "0.89.1"
uvicorn = "0.20.0"
pymysql = "1.0.2"
sqlalchemy = "2.0.1"


[tool.poetry.group.dev.dependencies]
pytest = "7.2.1"
black = "23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
