[tool.poetry]
name = "demo-fastapi-sqlalchemy"
version = "0.1.0"
description = ""
authors = ["Javier Valero Cejudo <javalce29@gmail.com>"]
readme = "README.md"
packages = [{include = "demo_fastapi_sqlalchemy"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.90.0"
uvicorn = "0.20.0"
pymysql = "1.0.2"
sqlalchemy = "2.0.2"


[tool.poetry.group.dev.dependencies]
pytest = "7.2.1"
black = "23.1.0"
httpx = "0.23.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
